Mise à  jour du code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="war_ana">Une erreur est survenue lors de la sauvegarde</string>
     <string name="indique_patient">Veillez indiquer le nom du Patient</string>
     <string name="indique_technicien">Veillez indiquer le nom du Technicien</string>
+    <string name="title_activity_lolololo">lolololo</string>
 </resources>
